vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeComparisonMissingCodeElmSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPrkwH6cEdBrELm7HIWrPCQkpVeE9b3qb2kKMl0lpTlabQnF8jf9O13YhTbIAYsyILgEXJ79r
UPhhoggkBXgleoM3BWLdN0piao85Oi4MPN+cc9B4ydeMleoH/iVb5ZTLsmvWsZ9dyTdBD4MpnvxF
hDLbayXSidSRz8d7fmHoNrwFBjH58Z2XAskyZ5BqlZqc1Yvls6iF9mdRKh8QO9Zshak3Z7/VQRbo
9utpXmfxQBtgtFa+ialp+4aND1obB+8gh6SZWkA3mRNhhFUazjL06gBQo9jxQ0182dn71XUxJIsF
9tPxRcFfTDjjX91Oo4jKwX0zhKNuxJSt52h5IegDRx7A0ZP5Jk3pKU5jdsko77rPzUyKlJsJJXQR
qvTrMJKnZ2SjgwA90CY4/dlW/RdwZWAapvKEmMwGod9yRsISTTB+XsmscAhmTx+EJIb5C7aEQTiX
SnXS36zZYNQDgsABbhKO0YdFV4DpjNBh24Os+QpUYAjqFR3mx+3+wFm05zwvNYCAIi7YDVR8QWE0
myPz7d9PYQi57VemHqRZPqGreve0rY6IjDnicRtjWXS0U1W4bbAoXNyYDxQLhOUqSQ7QDA0mrPd6
Na4bWNEXNQpDaM+0fh+vEIXJ7k37YrsflGgV/bP7cUHE1ZYEIT6THuf/Y5iQkKpCbDrjjLDsaxVQ
rpvaRrWgmwy0PlYTi/5JmCZFw0tMzbV3Z3ucDh+15pJGyRM7UoJKcwvP26OKSe7sPHBpGQKI7Y/e
5Ndt67hl7RIeyhafrRIIbVaMgYcpU8XNc7tcUNuFXWODIEdY8coiBMUe2GlkgCvlQ7/JvZDNDEMu
/UxSjdf7OukVhdzshI0sLVxTcrBtgqRKEZMsxMXbgt5YV/kNkvGg6ERo2bhY22FpVfEwJ3xmFIjU
5MXDVkx6CkKwmAr3bN5Aannlhjxpsp3G+DlyN7bCkdx4WRfshhw4IqFPpmApaTgMOPU7fNWMuVh0
DajWx73u3aG6eMRkt6Wzs0fhwJSrfLqHc/oLvQz4WrMk80/BYCdZ6oHWbAM1OFxy8cGL/83s6lIS
80xEGLx0yaknIstoL2VavgMi9Bh4ElkoiFVYu7jebtwjQlvN5h1XNKs5ZUfqMaeNl81cOM7tAsIi
4xuuNpgHfcGa0T2A0qmxgWPYaPGYKj/EB8F9Z6Ae/Fk6jiVAWaCjNMlyKc1kVmRjM4z9a2rQGeWM
FuuwPTr+htYScteGFy24YHS30Qk3oMTMUOLPcsiZCqFlROrTYTHqTM0ItsUAedN/4cpsG9g7EY4p
x7I2bFHWmsqTKeUyFKd5TLSed/1YL1JkaHRmXD4kwQRKt7+mwcBN//h2lfTtBBcwh/6CFar3QEZW
3X0xGLVYCbz3yHBL+MFB3BKxccThpg1Oes4MYHcN7uTtMl8XklPRHpZnP+LR7Xh3FwRISnKbbxNf
P9wQ5UaoeTvQx4E2wFm9n5iRDyGaFkuX1/vRdoQpcu/c4w/6coRLRFCM0MQPWmmKRn3FyhJ5VJZi
shy4BBgU6W8L7Ttz0FenO5ZU5KI0ndQReOn662UEChEyhfTVe+ZdLGzzJjndiXCjl4lTJHP/VFkO
fKmevJuQv849Uhu2tmu1R6p560GWf9qUNn9fZvMX2W9zefOLiVkjO4ObEJ0fNhVX+5If